# charizhard-ota

./: .gitignore  Cargo.toml  Dockerfile  example_json_config.json
.github/workflows/: audit.yml  rust.yml
src/: main.rs
src/route/: mod.rs  utils.rs
temp_certif/: bad_certif.crt  bad_certif.key  ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  server.cnf  server.crt  server.csr  server.key
