[package]
name = "charizhard-ota"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
anyhow = "1.0"
axum = {version = "0.8", features = ["json"]}
regex = "1.11"
reqwest = { version = "0.12" , features =["json"] }
serde = "1.0"
tokio = { version = "1.42", features = ["full"] }
tracing-subscriber = "0.3"
axum-keycloak-auth = "0.8"
minio-rsc = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
