[package]
name = "charizhard-ota"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
anyhow = "1.0"
axum = {version = "0.8", features = ["json","macros"]}
regex = "1.11"
reqwest = { version = "0.12" , features =["json"] }
serde = "1.0"
tokio = { version = "1.42", features = ["full"] }
tracing-subscriber = "0.3"
axum-keycloak-auth = "0.8"
minio-rsc = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.140"
axum-server = {version= "0.7.1", features = ["tls-rustls"]}
rustls = "0.23.23"
urlencoding = "2.1.3"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.2"
hyper-rustls = "0.27.5"
